# rustmd

./: .gitignore  Cargo.toml  EXP.md  LICENSE  Next.md  README.md  SUGGEST.md  _debug.txt  build.rs  issue.md  plan.md  plan_01.md  plan_rebuild.md
.claude/: settings.local.json
.superpowers/brainstorm/-1781265069/content/: scrollbar-architecture.html  scrollbar-interaction.html  scrollbar-style.html  scrollbar-visibility.html  toolbar-layout.html
.superpowers/brainstorm/-1781265069/state/: server-info
docs/superpowers/plans/: 2026-06-12-multi-window.md  2026-06-13-editor-scrollbar.md  2026-06-14-ime-repair.md  2026-06-14-recent-files.md  2026-06-18-find-replace.md
docs/superpowers/specs/: 2026-06-12-multi-window-design.md  2026-06-13-editor-scrollbar-design.md  2026-06-14-recent-files-design.md  2026-06-18-find-replace-design.md
exp/: features.md  ime.md  ime_rime.md  visual-line-navigation.md
res/: icon.rc
src/: buffer.rs  config.rs  cursor.rs  editor.rs  file_explorer.rs  file_ops.rs  highlight.rs  inline.rs  key_mode.rs  lib.rs  line.rs  main.rs  markdown.rs  marker.rs  menu.rs  parser.rs  status_bar.rs  title_bar.rs  tooltip.rs  user_config.rs  window.rs  workspace.rs
src/editor/: action.rs  column_memory.rs  find.rs  ime.rs  mod.rs  persistence.rs  render.rs  state.rs  theme.rs
