[package]
name = "rustmd"
version = "0.2.0"
edition = "2024"

[lib]
name = "rustmd"
path = "src/lib.rs"

[[bin]]
name = "rustmd"
path = "src/main.rs"

[dependencies]
gpui = "0.2"
ropey = "1.6"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-highlight = "0.26"
tree-sitter-md = "0.5"
tree-sitter-rust = "0.24"
undo = "0.52"
anyhow = "1"
regex = "1"
smol = "2.0.2"
async-compat = "0.2"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
imara-diff = "0.2"
notify = "8.2"
open = "5"
reqwest = { version = "0.13", default-features = false, features = ["http2", "rustls", "json"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = { version = "0.23", features = ["ring"] }
gix = { version = "0.77", default-features = false }
rfd = "0.15"
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }
raw-window-handle = "0.6"
dirs = "5"

[features]
default = ["gpui/default"]
